# time-series-metadata

./: .gitignore  .readthedocs.yml  .zenodo.json  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: index.rst  time_series_metadata.scheme.rst
requirements/: dev-requirements-py310.txt  dev-requirements-py311.txt  dev-requirements-py35.in  dev-requirements-py35.txt  dev-requirements-py36.txt  dev-requirements-py37.txt  dev-requirements-py38.txt  dev-requirements-py39.txt  dev-requirements.in  upgrade_dependencies.sh
tests/: test_existence.py
time_series_metadata/: scheme.py
